Fix header background expansion on mobile
Builds on d979e09a12fbb677a25efab1694e2e92a5c23890 (i.e., fixes a bug
accidentally created by)

Otherwise, the background image doesn't expand as the menu does.

This commit also simplifies the JS.

--- a/django/newsocialist/static/css/styles.css
+++ b/django/newsocialist/static/css/styles.css
@@ -3,7 +3,6 @@
     color: #fff;
     background-image: url('/static/img/banner.png');
     position: fixed;
-    height: 68px;
     top: 0;
     left: 0;
     z-index: 999;
